# oxdi

./: Cargo.toml  README.md
oxdi/: Cargo.toml
oxdi/src/: languages.rs  lib.rs
oxdi/src/apis/: entries.rs
oxdi/src/models/: entries.rs  mod.rs
oxdi_cli/: Cargo.toml
oxdi_cli/src/: main.rs
