[package]
name = "oxdi"
version = "0.1.0"
authors = ["Danil Kondratiev <knightpp@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_qs = "0.8"
tracing = "0.1"
tracing-futures = "0.2"

# [dev-dependencies]
# futures = "0.3"
